<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/grid_unit"
>

    <TextView
        style="@style/BlocSofootTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_sofoot" />

    <EditText
        android:id="@+id/identifiant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_unit"
        android:hint="@string/identifiant"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_unit"
        android:hint="@string/mdp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.Sofoot.Light.SecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/grid_unit"
        android:text="@string/identifier" />

    <TextView
        style="@style/SofootTexte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mdp_perdu_question"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/password_lost"
        style="@style/SofootTexte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mdp_perdu_reponse" />

    <TextView
        style="@style/BlocSofootTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/creer_compte_sofoot" />

    <TextView
        style="@style/BlocSofootTexte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_compte_sofoot" />

    <Button
        android:id="@+id/btn_creer_compte"
        style="@style/Widget.Sofoot.Light.PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/creer_compte" />

</LinearLayout>