<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ligueTitle"
        style="@style/LigueTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/grid_unit"
        android:paddingTop="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <TextView
            style="@style/ClassementHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/classement_pts"
            android:width="23dp" />

        <TextView
            style="@style/ClassementHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/classement_journee"
            android:width="23dp" />

        <TextView
            style="@style/ClassementHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/classement_gagne"
            android:width="23dp" />

        <TextView
            style="@style/ClassementHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/classement_nul"
            android:width="23dp" />

        <TextView
            style="@style/ClassementHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/classement_perdu"
            android:width="23dp" />

        <TextView
            style="@style/ClassementHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/classement_diff"
            android:width="30dp" />
    </LinearLayout>

</LinearLayout>